# CharlesSchwabPlatform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  decision_mapper.py  main.py  pyproject.toml  qsl.toml  requirements.txt  runtime_config_support.py  runtime_execution_policy.py  strategy_loader.py  strategy_registry.py  strategy_runtime.py
.github/workflows/: ci.yml  execution-report-heartbeat.yml  runtime-guard.yml  sync-cloud-run-env.yml
application/: execution_service.py  rebalance_service.py  runtime_broker_adapters.py  runtime_composer.py  runtime_dependencies.py  runtime_notification_adapters.py  runtime_report_summary.py  runtime_reporting_adapters.py  runtime_strategy_adapters.py  signal_snapshot.py
entrypoints/: cloud_run.py
notifications/: renderers.py  telegram.py
scripts/: __init__.py  build_cloud_run_env_sync_plan.py  cloud_run_runtime_guard.py  execution_report_heartbeat.py  print_strategy_profile_status.py  print_strategy_switch_env_plan.py  reconcile_cloud_runtime.py
strategy/: allocation.py
tests/: test_build_cloud_run_env_sync_plan.py  test_cloud_run_runtime_guard.py  test_decision_mapper.py  test_env_example.py  test_execution_report_heartbeat.py  test_monitor_dispatcher.py  test_notifications.py  test_qsl_metadata.py  test_rebalance_service.py  test_reconcile_cloud_runtime.py  test_request_handling.py  test_runtime_broker_adapters.py  test_runtime_composer.py  test_runtime_config_support.py  test_runtime_execution_policy.py  test_runtime_report_summary.py  test_runtime_reporting_adapters.py  test_shared_chat_id_fallback.py  test_signal_snapshot.py  test_strategy_loader.py  test_strategy_runtime.py  test_sync_cloud_run_env_workflow.sh  test_uv_dependency_workflow.py
