[project]
name = "charles-schwab-platform"
version = "0.1.0"
description = "QuantStrategyLab platform layer for Charles Schwab broker."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "requests",
    "pandas-market-calendars",
    "pytz",
    "schwab-py",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-auth",
    "numpy",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true
