[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "charles-schwab-platform"
version = "0.3.0"
description = "QuantStrategyLab platform layer for Charles Schwab broker."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "requests",
    "pandas-market-calendars",
    "pytz",
    "schwab-py",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-auth",
    "numpy",
    "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@7032cde4547e7ec59af15df8935d142461a77051",
    "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@9f0e5e2deca8a9c16d711eb4772f08a7901da101",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
py-modules = [
  "decision_mapper",
  "main",
  "runtime_config_support",
  "runtime_execution_policy",
  "runtime_logging",
  "strategy_loader",
  "strategy_registry",
  "strategy_runtime",
]

[tool.setuptools.packages.find]
include = [
  "application*",
  "entrypoints*",
  "notifications*",
  "scripts*",
  "strategy*",
]
