[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "charles-schwab-platform"
version = "0.3.0"
description = "QuantStrategyLab platform layer for Charles Schwab broker."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "requests",
    "pandas-market-calendars",
    "pytz",
    "schwab-py",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-auth",
    "numpy",
    "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@fdae6666ba4e7c61444d87253476cee4ad02d2c1",
    "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@17ddb86c72d44b2c7b78ba7a10d8f71b21180166",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
py-modules = [
  "decision_mapper",
  "main",
  "runtime_config_support",
  "runtime_execution_policy",
  "runtime_logging",
  "strategy_loader",
  "strategy_registry",
  "strategy_runtime",
]

[tool.setuptools.packages.find]
include = [
  "application*",
  "entrypoints*",
  "notifications*",
  "scripts*",
  "strategy*",
]

[tool.uv]
override-dependencies = [
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@fdae6666ba4e7c61444d87253476cee4ad02d2c1",
]
